# capacitance2110

./: .gitattributes  .gitignore  AI_FEATURES.md  MEASUREMENT_MODE_CHANGES.md  Makefile  README.md  app.py  path.py  pyproject.toml  run-dev.bat  run.bat  setup.bat
ai/: __init__.py  assistant.py  tools.py
core/: __init__.py  controller.py  io_csv.py  models.py  units.py
examples/: ai_usage_example.py
instruments/: __init__.py  base.py  keithley2110.py  mock.py
measurements/: measurement_20251006_170823.csv  measurement_20251006_170830.csv  measurement_20251006_170837.csv  measurement_20251006_170844.csv  measurement_20251006_170851.csv
tests/: __init__.py  test_controller.py  test_csv.py  test_units.py
ui/: __init__.py  chat_widget.py  main_window.py  plot_widget.py
