[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keithley-cap-monitor"
version = "0.1.0"
description = "Capacitance measurement application for Keithley 2110 DMM"
authors = [{name = "Capacitance Monitor", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pyqtgraph>=0.13.0",
    "pyvisa>=1.13.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest-qt>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["core*", "instruments*", "ui*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
